--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
+
     <string name="app_name">Shutterstock</string>
+
+    <!-- Splash -->
+    <string name="spalsh_message">Welcome to Shutterstock App</string>
+
 </resources>
